tests/snapshots/pager__pager_search_preserves_whitespace.snap
---
source: tests/pager.rs
expression: rendered
---
== session: default ==
-- step 1 --
call:
{
  "tool": "r_repl",
  "arguments": {
    "input": "line <- paste(rep(\"x\", 200), collapse = \"\"); for (i in 1:200) { suffix <- if (i == 25) \" r\" else if (i == 75) \"r \" else \"\"; cat(sprintf(\"line%04d %s%s\\n\", i, line, suffix)) }\n",
    "timeout_ms": 30000
  }
}
response:
{
  "type": "tool_result",
  "is_error": false,
  "content": [
    {
      "type": "text",
      "text": "> line <- paste(rep(\"x\", 200), collapse = \"\"); for (i in 1:200) { suffix <- if (i == 25) \" r\" else if (i == 75) \"r \" else \"\"; cat(sprintf(\"line%04d %s%s\\n\", i, line, suffix)) }\nline0001 xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx"
    },
    {
      "type": "text",
      "text": "--More-- (140p, 0.4%, @0..210/42004)"
    }
  ]
}
-- step 2 --
call:
{
  "tool": "r_repl",
  "arguments": {
    "input": ":where  r\n",
    "timeout_ms": 30000
  }
}
response:
{
  "type": "tool_result",
  "is_error": false,
  "content": [
    {
      "type": "text",
      "text": "[pager] next match is ~23 page(s) ahead: use :/ r or `:skip 23`"
    },
    {
      "type": "text",
      "text": "--More-- (140p, 0.4%, @210/42004)"
    }
  ]
}
-- step 3 --
call:
{
  "tool": "r_repl",
  "arguments": {
    "input": ":/ r\n",
    "timeout_ms": 30000
  }
}
response:
{
  "type": "tool_result",
  "is_error": false,
  "content": [
    {
      "type": "text",
      "text": "[pager] search for ` r` @5249"
    },
    {
      "type": "text",
      "text": "[match] ...xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx r"
    },
    {
      "type": "text",
      "text": "--More-- (124p, 11.9%, @5040/42004)"
    }
  ]
}
-- step 4 --
call:
{
  "tool": "r_repl",
  "arguments": {
    "input": ":where r \n",
    "timeout_ms": 30000
  }
}
response:
{
  "type": "tool_result",
  "is_error": false,
  "content": [
    {
      "type": "text",
      "text": "[pager] match is on the current/next page: use :/r"
    },
    {
      "type": "text",
      "text": "--More-- (124p, 11.9%, @5040/42004)"
    }
  ]
}
-- step 5 --
call:
{
  "tool": "r_repl",
  "arguments": {
    "input": ":/r \n",
    "timeout_ms": 30000
  }
}
response:
{
  "type": "tool_result",
  "is_error": false,
  "content": [
    {
      "type": "text",
      "text": "[pager] search for `r` @5250"
    },
    {
      "type": "text",
      "text": "[pager] shown earlier @5249..5251"
    },
    {
      "type": "text",
      "text": "[match] ...xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx r"
    },
    {
      "type": "text",
      "text": "--More-- (124p, 11.9%, @5040/42004)"
    }
  ]
}
-- step 6 --
call:
{
  "tool": "r_repl",
  "arguments": {
    "input": ":q\n",
    "timeout_ms": 30000
  }
}
response:
{
  "type": "tool_result",
  "is_error": false,
  "content": [
    {
      "type": "text",
      "text": "(END, 11.9%, @5040/42004)"
    },
    {
      "type": "text",
      "text": "> "
    }
  ]
}
